# gitops-myapp

./: .env.example  Dockerfile  check_db.py  cleanup.py  entrypoint.sh  pyproject.toml  update_product_images.py
.github/workflows/: main.yaml
myapp/: settings.py  urls.py
shop/: admin.py  models.py  urls.py  views.py
shop/migrations/: 0001_initial.py  0002_page.py  0003_add_tayninh_products.py
shop/static/shop/css/: style.css
shop/templates/shop/: base.html  page_detail.html  product_detail.html  product_list.html
